--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,20 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>歴史クイズアプリ</title>
+    <!-- GitHub Pages向けのSPAリダイレクトスクリプト -->
+    <script type="text/javascript">
+      // 404.htmlからリダイレクトされた場合に処理
+      (function(l) {
+        if (l.search[1] === '/' ) {
+          var decoded = l.search.slice(1).split('&').map(function(s) { 
+            return s.replace(/~and~/g, '&')
+          }).join('?');
+          window.history.replaceState(null, null,
+              l.pathname.slice(0, -1) + decoded + l.hash
+          );
+        }
+      }(window.location))
+    </script>
   </head>
   <body>
     <noscript>このアプリを実行するには、JavaScriptを有効にする必要があります。</noscript>
